# ARCTIC

./: CMakeLists.txt  README.md  arctic_codebase_explanation.md  arctic_phase2_math_deepdive.md
benchmarks/: bench_spsc.cpp
deep_dive/: analysis_results.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: RacingSimulator.tsx  SimulatorHUD.css  SimulatorHUD.tsx
frontend/src/engine/: SimulationEngine.ts
scripts/: plot_convergence.py  plot_decay.py  plot_live_adaptation.py  run_profiler.ps1
src/: itch_parser.hpp  live_adaptation_logger.cpp  live_latency.cpp  live_latency.hpp  main.cpp  math_utils.cpp  order_book.hpp  ou_sampler.hpp  race_resolver.hpp  replay_engine.cpp  replay_engine.hpp  replay_main.cpp  single_agent.hpp  spsc_buffer.hpp  sweep_generator.cpp  test_ks.cpp  wasm_core.cpp
tests/: test_itch.cpp  test_lob.cpp  test_math.cpp
web/: CMakeLists.txt  index.html  package-lock.json  package.json  tailwind.config.js  test_pup.cjs
web/src/: App.css  App.tsx  Background3D.tsx  WebGLCanvas.tsx  arctic_wasm.js  arctic_wasm.wasm  index.css
